# movie-recommendation

./: .gitignore  2_fetch_movie_plots.py  Dockerfile  README.md  docker-compose.yml  fetch_movie_plots.py  main.py  preprocess_data.py  process_movies.py  pyproject.toml
scripts/: create_temp_db.py  populate_detailed_description.py  populate_overview.py
src/: ai.py  db.py  prompts.py
tests/: test_main.py
webapp/backend/: .pre-commit-config.yaml  .secrets.baseline  Makefile  pyproject.toml
webapp/backend/app/: db.py  main.py  models.py
webapp/backend/app/routers/: movies.py
webapp/backend/tests/: test_movies.py
