[project]
name = "movie-recommendation"
version = "0.1.0"
description = "Movie recommendation system using fastapi"
authors = [
    { name = "Artem Sokolov", email = "sokolovartem6@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "uvicorn[standard]>=0.30.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.11",
    "mypy>=1.16.0"
]

[project.scripts]
start = "uvicorn main:app --reload"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
