[project]
name = "movie-recommendation"
version = "0.1.0"
description = "Movie recommendation system using FastAPI and OpenAI"
authors = [
    { name = "Artem Sokolov", email = "sokolovartem6@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.6.1",
    "requests>=2.32.0",
    "pandas>=2.2.2",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
